--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,53 @@
     color: white;
     padding-left: 10vw;
 }
+
+.app-navigation {
+    --color-text-maxcontrast: var(--color-text-maxcontrast-background-blur, var(--color-text-maxcontrast-default));
+    transition: transform var(--animation-quick),margin var(--animation-quick);
+    width: 300px;
+    position: relative;
+    top: 0;
+    left: 0;
+    padding: 0px;
+    z-index: 1800;
+    height: 100%;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    flex-grow: 0;
+    flex-shrink: 0;
+    background-color: var(--color-main-background-blur, var(--color-main-background));
+    -webkit-backdrop-filter: var(--filter-background-blur, none);
+    backdrop-filter: var(--filter-background-blur, none);
+  }
+
+.app-content {
+    position: initial;
+    z-index: 1000;
+    flex-basis: 100vw;
+    height: 100%;
+    margin: 0 !important;
+    background-color: var(--color-main-background);
+    min-width: 0;
+    --topbar-margin: 4px;
+  }
+
+  .app-navigation-button {
+    z-index: 100;
+    display: flex;
+    overflow: hidden;
+    flex: 1 1 0;
+    box-sizing: border-box;
+    min-height: 44px;
+    padding: 0;
+        padding-right: 0px;
+    white-space: nowrap;
+    color: var(--color-main-text);
+    background-repeat: no-repeat;
+    background-position: 14px center;
+    background-size: 16px 16px;
+    line-height: 44px;
+  }
