--- a/css/main.css
+++ b/css/main.css
@@ -36,19 +36,46 @@
     --topbar-margin: 4px;
   }
 
-  .app-navigation-button {
+  .app-navigation-entry {
+    background-color: rgba(0,0,0,0);
+    position: relative;
+    display: flex;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 44px;
+    transition: background-color var(--animation-quick) ease-in-out;
+    transition: background-color 200ms ease-in-out;
+    border-radius: var(--border-radius-pill);
+    font-size: x-large;
+  }
+
+  .app-navigation-entry-link {
     z-index: 100;
     display: flex;
     overflow: hidden;
     flex: 1 1 0;
-    box-sizing: border-box;
-    min-height: 44px;
-    padding: 0;
-        padding-right: 0px;
-    white-space: nowrap;
-    color: var(--color-main-text);
-    background-repeat: no-repeat;
-    background-position: 14px center;
-    background-size: 16px 16px;
     line-height: 44px;
+    padding-left: 15%;
+    padding-top: 5%;
+  }
+
+  .content-list {
+    --row-height: 55px;
+    --cell-margin: 14px;
+    display: block;
+    overflow: auto;
+    height: 100%;
+  }
+
+  .content-entry{
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 55px;
+    font-size: 150%;
+    padding-left: 5%;
+    padding-top: 5%
   }
