--- a/css/main.css
+++ b/css/main.css
@@ -40,13 +40,9 @@
     background-color: rgba(0,0,0,0);
     position: relative;
     display: flex;
-    flex-shrink: 0;
-    flex-wrap: wrap;
-    box-sizing: border-box;
+    flex-direction: column;
     width: 100%;
-    min-height: 44px;
-    transition: background-color var(--animation-quick) ease-in-out;
-    transition: background-color 200ms ease-in-out;
+    height: 20%;
     border-radius: var(--border-radius-pill);
     font-size: x-large;
   }
@@ -57,8 +53,8 @@
     overflow: hidden;
     flex: 1 1 0;
     line-height: 44px;
-    padding-left: 15%;
-    padding-top: 5%;
+    padding-left: 50px;
+    padding-top: 20px;
   }
 
   .content-list {
@@ -69,13 +65,31 @@
     height: 100%;
   }
 
-  .content-entry{
+  .content-entry {
     position: relative;
     display: flex;
     align-items: center;
     width: 100%;
-    height: 55px;
+    height: 75px;
     font-size: 150%;
-    padding-left: 5%;
-    padding-top: 5%
+    padding-left: 50px;
+    border-bottom: 1px solid;
+    border-color: gray;
+  }
+
+  .content-name {
+    width: 25vw;
+    justify-content: left;
+  }
+
+  .content-state {
+    width: 25vw;
+    justify-content: left;
+  }
+
+  .title-wrapper {
+    font-size: 300%;
+    padding-left: 125px;
+    padding-top: 50px;
+    padding-bottom: 25px;
   }
