--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 20%;
+    height: 25%;
     border-radius: var(--border-radius-pill);
     font-size: x-large;
   }
@@ -164,4 +164,55 @@
     100% {
       transform: translate(42px, 0);
     }
+  }
+
+  .create-button {
+    margin-left: 50px !important;
+    margin-top: 35px !important
+  }
+
+  .form-container {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .form-element {
+    background-color: var(--color-background-dark);
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888888;
+    width: 30%;
+    font-weight: bolder;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .exit-button {
+    width: 38px !important; 
+    margin: 0px !important;
+    border: none !important;
+    font-size: 2em !important;
+  }
+
+  .form-title {
+    font-size: x-large;
+    align-self: center;
+    margin-bottom: 20px;
+  }
+
+  .resource-group-label {
+    margin-bottom: 10px !important;
+  }
+
+  .form-input {
+    width:100% !important;
+    margin-bottom: 20px !important;
+    align-self: flex-end o !important;
   }
